# FocusForgeAI

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.md
scripts/: setup_opik.py
src/: config.py  main.py
src/agent/: focusforge_agent.py
